redo intro and start filling out content

--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -4,55 +4,71 @@
 
 {% block content %}
 <section class="container">
- <h1>Events</h1>
- <p>
-  At ECSS We run events, including socials, talks from companies and more.
- </p>
- <p>
-  The timeline below shows some of our most popular major events we will be running this year, besides this we also planned to have other events throughout the year. However, we are open to fresh ideas, and fell free to put forward if you have any suggestions.
- </p>
- <div>
-  <div class="timeline">
-   <div class="timeline-container timeline-container-left">
-    <div class="timeline-content">
-     <h5>Halloween Event</h5>
-     <p>Oct. 2018</p>
+  <h1>Events</h1>
+  <p>
+    ECSS runs numerous social events throughout the year for its members. These range from industry events with top employers
+    to nightlife events (alcohol is not mandatory!) to board game evenings.
+  </p>
+  <p>
+    The timeline below shows some of our top events we have planned for 2018/19. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href='https://www.facebook.com/ecss.soton/'>Facebook page</a>.
+  </p>
+  <div>
+    <div class="timeline">
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>Freshers' Social</h5>
+          <p>Sept. 2018</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-right">
+          <div class="timeline-content">
+            <h5>Video Game Social</h5>
+            <h7>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There will also be board games available if video games aren't your fancy.</h7>
+            <p>Oct. 2018</p>
+          </div>
+        </div>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>Halloween House Crawl</h5>
+          <h7>Tour the committee's houses on an evening filled with spooks and laughs. Dress up (either as your favourite ECS lecturer or something scary 👻) and judge our student digs!</h7>
+          <p>Oct. 2018</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-right">
+        <div class="timeline-content">
+          <h5>Christmas Party</h5>
+          <p>Dec. 2018</p>
+        </div>
+      </div>
+      <hr>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>Hackathon</h5>
+          <p>Mar. 2019</p>
+        </div>
+      </div>
+      <hr>
+      <div class="timeline-container timeline-container-right">
+        <div class="timeline-content">
+          <h5>BBQ</h5>
+          <p>Jul. 2019</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>Boat Ball</h5>
+          <p>Jul. 2019</p>
+        </div>
+      </div>
     </div>
-   </div>
-   <div class="timeline-container timeline-container-right">
-    <div class="timeline-content">
-     <h5>Christmas Party</h5>
-     <p>Dec. 2018</p>
-    </div>
-   </div>
-   <hr>
-   <div class="timeline-container timeline-container-left">
-    <div class="timeline-content">
-     <h5>Hackathon</h5>
-     <p>Mar. 2019</p>
-    </div>
-   </div>
-   <hr>
-   <div class="timeline-container timeline-container-right">
-    <div class="timeline-content">
-     <h5>BBQ</h5>
-     <p>Jul. 2019</p>
-    </div>
-   </div>
-   <div class="timeline-container timeline-container-left">
-    <div class="timeline-content">
-     <h5>Boat Ball</h5>
-     <p>Jul. 2019</p>
-    </div>
-   </div>
+    <small class="text-muted">Note: the plan shown in the timeline may be subject to change.</small>
   </div>
-  <small class="text-muted">Note: the plan shown in the timeline may be subject to change.</small>
- </div>
- <p>
-  You can always come back to our website or follow us on Facebook for updates and checkout our events information.
- </p>
- <p>
-  Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our media notice.
- </p>
+  <p>
+    You can always come back to our website or follow us on Facebook for updates and checkout our events information.
+  </p>
+  <p>
+    Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know
+    if you do not want to be photographed/filmed. Find out more in our media notice.
+  </p>
 </section>
 {% endblock %}
