descriptions now added

--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -17,6 +17,7 @@
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Freshers' Social</h5>
+          <h7>Welcome freshers! This is an evening dedicated to introducing you to the department and the society. Hosted in the department and at the Hobbit.</h7>
           <p>Sept. 2018</p>
         </div>
       </div>
@@ -37,6 +38,7 @@
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
           <h5>Christmas Party</h5>
+          <h7>Party in style at our annual Christmas do! Dress to kill and show off your dancing 'skills'.</h7>
           <p>Dec. 2018</p>
         </div>
       </div>
@@ -44,6 +46,7 @@
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Hackathon</h5>
+          <h7>Flex your programming talent for exciting prizes in our 24 hour hackathon challenge. Would recommend to anyone who loves to code.</h7>
           <p>Mar. 2019</p>
         </div>
       </div>
@@ -51,12 +54,14 @@
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
           <h5>BBQ</h5>
+          <h7>Top off your exam season with food on us! Also hosted at the Hobbit, come hangout with your friends in the sun.</h7>
           <p>Jul. 2019</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Boat Ball</h5>
+          <h7>Fancy yourself a sea captain? Dress like it and we might let you pilot our end of year boat ball. Black tie and champagne advised.</h7>
           <p>Jul. 2019</p>
         </div>
       </div>
