Change html tags

--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -6,8 +6,7 @@
 <section class="container">
   <h1>Events</h1>
   <p>
-    ECSS runs numerous social events throughout the year for its members. These range from industry events with top employers
-    to nightlife events (alcohol is not mandatory!) to board game evenings.
+    ECSS runs numerous social events throughout the year for its members. These range from industry events with top employers to nightlife events (alcohol is not mandatory!) to board game evenings.
   </p>
   <p>
     The timeline below shows some of our top events we have planned for 2018/19. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href='https://www.facebook.com/ecss.soton/'>Facebook page</a>.
@@ -17,28 +16,28 @@
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Freshers' Social</h5>
-          <h7>Welcome freshers! This is an evening dedicated to introducing you to the department and the society. Hosted in the department and at the Hobbit.</h7>
+          <p>Welcome freshers! This is an evening dedicated to introducing you to the department and the society. Hosted in the department and at the Hobbit.</p>
           <p>Sept. 2018</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
           <div class="timeline-content">
             <h5>Video Game Social</h5>
-            <h7>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There will also be board games available if video games aren't your fancy.</h7>
+            <p>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There will also be board games available if video games aren't your fancy.</p>
             <p>Oct. 2018</p>
           </div>
         </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Halloween House Crawl</h5>
-          <h7>Tour the committee's houses on an evening filled with spooks and laughs. Dress up (either as your favourite ECS lecturer or something scary 👻) and judge our student digs!</h7>
+          <p>Tour the committee's houses on an evening filled with spooks and laughs. Dress up (either as your favourite ECS lecturer or something scary 👻) and judge our student digs!</p>
           <p>Oct. 2018</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
           <h5>Christmas Party</h5>
-          <h7>Party in style at our annual Christmas do! Dress to kill and show off your dancing 'skills'.</h7>
+          <p>Party in style at our annual Christmas do! Dress to kill and show off your dancing 'skills'.</p>
           <p>Dec. 2018</p>
         </div>
       </div>
@@ -46,7 +45,7 @@
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Hackathon</h5>
-          <h7>Flex your programming talent for exciting prizes in our 24 hour hackathon challenge. Would recommend to anyone who loves to code.</h7>
+          <p>Flex your programming talent for exciting prizes in our 24 hour hackathon challenge. Would recommend to anyone who loves to code.</p>
           <p>Mar. 2019</p>
         </div>
       </div>
@@ -54,14 +53,14 @@
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
           <h5>BBQ</h5>
-          <h7>Top off your exam season with food on us! Also hosted at the Hobbit, come hangout with your friends in the sun.</h7>
+          <p>Top off your exam season with food on us! Also hosted at the Hobbit, come hangout with your friends in the sun.</p>
           <p>Jul. 2019</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Boat Ball</h5>
-          <h7>Fancy yourself a sea captain? Dress like it and we might let you pilot our end of year boat ball. Black tie and champagne advised.</h7>
+          <p>Fancy yourself a sea captain? Dress like it and we might let you pilot our end of year boat ball. Black tie and champagne advised.</p>
           <p>Jul. 2019</p>
         </div>
       </div>
