--- a/website/templates/website/error_pages/500.html
+++ b/website/templates/website/error_pages/500.html
@@ -1,7 +1,7 @@
 {% extends 'website/base.html' %}
 
 {% block content %}
-<div class="container alert alert-danger">
+<div class="container mt-3 alert alert-danger">
   <h1>Error</h1>
   <p>Oops, something went wrong :(</p>
   <p>Feel free to <a href="mailto:jc14g16@ecs.soton.ac.uk" class="alert-link">tell the webmaster</a> what happened.</p>
