--- a/website/templates/website/media-notice.html
+++ b/website/templates/website/media-notice.html
@@ -3,7 +3,7 @@
 {% block title %}Media Notice - ECSS{% endblock title %}
 
 {% block content %}
-<section class="container">
+<section class="container mt-3">
   <h1>Media Notice</h1>
   <p>Please note that photography and filming might be taking place at our events.</p>
   <p>The photographs/film might be published on our website, social media and other promotional materials.</p>
