--- a/ecsswebauth/templates/ecsswebauth/auth.html
+++ b/ecsswebauth/templates/ecsswebauth/auth.html
@@ -3,7 +3,7 @@
 {% block title %}Login - ECSS{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-3">
   {% if not user.is_authenticated %}
   <p class="alert alert-info">You are not logged in.</p>
   <form action="{% url 'ecsswebauth:saml-login'%}" method="POST">
