--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <div class="col-lg-3">
       <ul class="list-group" id="portal-nav">
