--- a/website/templates/website/error_pages/403.html
+++ b/website/templates/website/error_pages/403.html
@@ -1,7 +1,7 @@
 {% extends 'website/base.html' %}
 
 {% block content %}
-<div class="container alert alert-danger">
+<div class="container mt-3 alert alert-danger">
   <h1>Permission Denied</h1>
   {% if user.is_authenticated %}
   <p>You are logged in as <strong>{{ user.username }}</strong>.</p>
