--- a/website/templates/website/error_pages/404.html
+++ b/website/templates/website/error_pages/404.html
@@ -1,7 +1,7 @@
 {% extends 'website/base.html' %}
 
 {% block content %}
-<div class="container alert alert-danger">
+<div class="container mt-3 alert alert-danger">
   <h1>Page not found</h1>
   <!--<p>Got lost? The <a href="#" class="alert-link">sitemap</a> might help!</p>-->
 </div>
