--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -3,7 +3,7 @@
 {% block title %}Events - ECSS{% endblock title %}
 
 {% block content %}
-<section class="container">
+<section class="container mt-3">
   <h1>Events</h1>
   <p>
     ECSS runs numerous social events throughout the year for its members. These range from industry events with top employers to nightlife events (alcohol is not mandatory!) to board game evenings.
