--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-3">
   <section>
     <img src="{% static 'website/images/ecss-logo-square.png' %}" alt="ECSS logo" class="logo-home">
     <h1 class="text-center">Welcome to ECSS!</h1>
