New socials pages

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -47,8 +47,8 @@
                 <div class="dropdown-menu" aria-labelledby="navbarEventsDropdown">
                   <a class="dropdown-item" href="{% url 'website:events' %}">Events Overview</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/leaflet/?section=Socials">Socials</a>
-                  <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/leaflet/?section=Gaming%20Socials">Game Socials</a>
+                  <a class="dropdown-item" href="{% url 'website:socials' %}">Socials</a>
+                  <a class="dropdown-item" href="{% url 'website:gaming-socials' %}">Gaming Socials</a>
                 </div>
               </li>
               <li class="nav-item">
