--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %}
 
-{% block title %}Events - ECSS{% endblock title %}
+{% block title %}Events in ECSS{% endblock title %}
 
 {% block content %}
 <section class="container mt-3">
