--- a/website/templates/website/welfare.html
+++ b/website/templates/website/welfare.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Welfare - ECSS{% endblock title %}
+{% block title %}Welfare in ECSS{% endblock title %}
 
 {% block content %}
 <div class="page-header">
