Add jumpstart 2018 navbar

--- a/website/static/website/styles/events/jumpstart-2018.css
+++ b/website/static/website/styles/events/jumpstart-2018.css
@@ -1,3 +1,30 @@
+/*
+Jumpstart 2018 navbar
+*/
+
+.navbar-jumpstart2018 {
+  opacity: 0.9;
+}
+
+.navbar-sticky-jumpstart2018 + main {
+  padding-top: 56px;
+}
+
+@media (max-width: 575.98px) {
+  .navbar-jumpstart2018 {
+    display: none;
+  }
+
+  .navbar-jumpstart2018 + main {
+    padding-top: 0;
+  }
+}
+
+
+/*
+Logos
+*/
+
 .logos-jumpstart2018 {
   display: flex;
   flex-wrap: wrap;
@@ -7,7 +34,7 @@
 .logo-container-jumpstart2018 {
   width: 10rem;
   height: 10rem;
-  margin: 2rem;
+  margin: 4rem;
   align-items: center;
   justify-content: center;
 }
@@ -25,6 +52,19 @@
   justify-content: center;
 }
 
+
+/*
+Maps
+*/
+
 #map {
   height: 30rem;
+}
+
+/*
+Override template
+*/
+
+footer {
+  margin: 0 !important;
 }
