Add images to jumpstart page

--- a/website/static/website/styles/events/jumpstart-2018.css
+++ b/website/static/website/styles/events/jumpstart-2018.css
@@ -54,17 +54,22 @@ Logos
 
 
 /*
+Pictures
+*/
+
+.pics-jumpstart2018 {
+  font-size: 0;
+}
+
+.pic-jumpstart2018 {
+  width: 33.33%;
+}
+
+
+/*
 Maps
 */
 
 #map {
   height: 30rem;
-}
-
-/*
-Override template
-*/
-
-footer {
-  margin: 0 !important;
 }
