--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -32,7 +32,7 @@
   </nav>
 </div>
 <main class="content-jumpstart2018">
-  <section id="jumpstart-2018" class="py-4">
+  <section id="jumpstart-2018" class="pt-4 mb-0">
     <div class="container">
       <div class="logos-jumpstart2018">
         <div class="logo-container-jumpstart2018">
@@ -48,14 +48,19 @@
       <h1>Jumpstart 2018</h1>
       <p>Jumpstart is an opportunity for freshers to meet other students in the faculty, take part in a range of activities, and settle into Southampton. It is the first event of the year organised by ECSS, and is sponsored by IBM. See below for the week’s timetable, and information on the City Challenge which is part of the UG timetable. If you have any questions feel free to <a href="{% url 'website:contact' %}">contact our committee</a>, and have fun!</p>      
     </div>
-    </section>
+    <div class="pics-jumpstart2018 mt-4">
+      <img class="img-fluid pic-jumpstart2018" src="{% static 'website/content/events/jumpstart-2018/jumpstart-1.jpg' %}" alt="Jumpstart Q&A">
+      <img class="img-fluid pic-jumpstart2018" src="{% static 'website/content/events/jumpstart-2018/jumpstart-2.jpg' %}" alt="Jumpstart City Challenge">
+      <img class="img-fluid pic-jumpstart2018" src="{% static 'website/content/events/jumpstart-2018/jumpstart-3.jpg' %}" alt="Jumpstart City Challenge">
+    </div>
+  </section>
   <section id="timetable" class="py-4 bg-light">
     <div class="container">
       <h2>Timetable</h2>
       <p class="text-muted">Timetable will appear here soon.</p>
     </div>
   </section>
-  <section id="city-challenge" class="py-4">
+  <section id="city-challenge" class="pt-4">
     <div class="container">
       <h2>City Challenge</h2>
       <p>The Jumpstart City Challenge is our take on introducing you to Southampton. We’ll be splitting you into teams, assigning you a Jumpstart Helper (a current ECS student), and giving you the aim of getting as many points as possible.</p>
@@ -67,12 +72,15 @@
       </section>
     </div>
   </section>
-  <!-- <section id="maps" class="pt-4 bg-light mb-0">
+  <!-- <section id="maps" class="pt-4 bg-light">
     <div class="container">
       <h2>Maps</h2>
     </div>
     <div id="map"></div>
   </section> -->
+  <div class="container">
+    <small class="text-muted">Pictures on this page are from Jumpstart 2017.</p>
+  </div>
 </main>
 {% endblock %}
 
