--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -79,7 +79,7 @@
     <div id="map"></div>
   </section> -->
   <div class="container">
-    <small class="text-muted">Pictures on this page are from Jumpstart 2017.</p>
+    <small class="text-muted">Pictures on this page are from Jumpstart 2017.</small>
   </div>
 </main>
 {% endblock %}
