first take on improvement, will add more to tomorrow

--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <h1>Jumpstart 2018</h1>
-      <p>Jumpstart is an opportunity for freshers to meet other students in the faculty, take part in a range of activities, and settle into Southampton. It is the first event of the year organised by ECSS, and is sponsored by IBM. See below for the week’s timetable, and information on the City Challenge which is part of the UG timetable. If you have any questions feel free to <a href="{% url 'website:contact' %}">contact our committee</a>, and have fun!</p>      
+      <p>Jumpstart is an opportunity for freshers to meet other students in the faculty, take part in a range of activities, and settle into Southampton. It is our first ECSS event of the year, and is sponsored by IBM. See below for the week’s timetable, and information on the City Challenge which is part of the UG timetable. If you have any questions feel free to <a href="{% url 'website:contact' %}">contact our committee</a>, and have fun!</p>      
     </div>
     <div class="pics-jumpstart2018 mt-4">
       <img class="img-fluid pic-jumpstart2018" src="{% static 'website/content/events/jumpstart-2018/jumpstart-1.jpg' %}" alt="Jumpstart Q&A">
@@ -63,7 +63,7 @@
   <section id="city-challenge" class="pt-4">
     <div class="container">
       <h2>City Challenge</h2>
-      <p>The Jumpstart City Challenge is our take on introducing you to Southampton. We’ll be splitting you into teams, assigning you a Jumpstart Helper (a current ECS student), and giving you the aim of getting as many points as possible.</p>
+      <p>The Jumpstart City Challenge is our take on showing you what Southampton has to offer. We’ll be splitting you into teams, assigning you a Jumpstart Helper (a current ECS student), and setting you a series of challenges with cool prizes (to be announced!)..</p>
       <p>Points can be achieved by exploring the main areas this side of the city; Highfield Campus, The Common, and Portswood; and completing various challenges outlined below. In doing so, you’ll be introduced to the members of the ECSS committee, find your bearings in Southampton, and make some new friends!</p>
       <p>The winning team will be announced at the Jumpstart reception on Friday 29th September, with prizes from the faculty, ECSS, and IBM up for grabs. Some of the challenges are listed on the map below with red pins, and some you do whilst on your travels (make sure to remind your helpers). You can do as many or as few as you like, in any order. Good luck!</p>
       <section id="city-challenge-groups">
