--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -63,9 +63,9 @@
   <section id="city-challenge" class="pt-4">
     <div class="container">
       <h2>City Challenge</h2>
-      <p>The Jumpstart City Challenge is our take on showing you what Southampton has to offer. We’ll be splitting you into teams, assigning you a Jumpstart Helper (a current ECS student), and setting you a series of challenges with cool prizes (to be announced!)..</p>
-      <p>Points can be achieved by exploring the main areas this side of the city; Highfield Campus, The Common, and Portswood; and completing various challenges outlined below. In doing so, you’ll be introduced to the members of the ECSS committee, find your bearings in Southampton, and make some new friends!</p>
-      <p>The winning team will be announced at the Jumpstart reception on Friday 29th September, with prizes from the faculty, ECSS, and IBM up for grabs. Some of the challenges are listed on the map below with red pins, and some you do whilst on your travels (make sure to remind your helpers). You can do as many or as few as you like, in any order. Good luck!</p>
+      <p>Get ready for The Jumpstart City Challenge 2019, Freshers! We'll be splitting you into teams and giving you the opportunity to compete in a series of group challenges and games, seeing some of our favourite things Southampton has to offer, alongside your assigned Jumpstart Group Leader (a current ECS student). This is the first of many chances you'll have to interact with the committee members, who will be glad to answer any of your questions and learn a bit more about us as a society.</p>
+      <p>Completion of any of our smorgasbord of activities with be worth some point value so be sure to bring your A-game!</p>
+      <p>Of course, it wouldn't be much of a challenge without prizes; be sure to attend the Jumpstart reception on Friday 28th September, where we'll have some goodies from ECSS and IBM up for grabs.</p>
       <section id="city-challenge-groups">
         <h3>City Challenge Groups</h3>
         <p class="text-muted">Groups info will be released soon.</p>
