Add Jumpstart link to navbar

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -49,6 +49,8 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'website:socials' %}">Socials</a>
                   <a class="dropdown-item" href="{% url 'website:gaming-socials' %}">Gaming Socials</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'website:jumpstart-2018' %}">Jumpstart 2018</a>
                 </div>
               </li>
               <li class="nav-item">
