--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -11,7 +11,7 @@
   <p>
     The timeline below shows some of our top events we have planned for 2018/19. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href='https://www.facebook.com/ecss.soton/'>Facebook page</a>.
   </p>
-  <div>
+  <div class="mb-3">
     <div class="timeline">
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
@@ -72,7 +72,7 @@
   </p>
   <p>
     Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know
-    if you do not want to be photographed/filmed. Find out more in our media notice.
+    if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.
   </p>
 </section>
 {% endblock %}
