--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -79,6 +79,8 @@
     <div id="map"></div>
   </section> -->
   <div class="container">
+    <hr>
+    <p>Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.</p>
     <small class="text-muted">Pictures on this page are from Jumpstart 2017.</small>
   </div>
 </main>
