Add jumpstart link onto homepage

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -17,10 +17,11 @@
     <p>Still reading? You can even find out more <a href="https://society.ecs.soton.ac.uk/about/">about us</a>.</p>
     <p>To keep up with the latest events, join the <a href="https://www.facebook.com/groups/ecss.soton/">ECSS Facebook group</a>, like <a href="https://www.facebook.com/ecss.soton/">our Facebook page</a> and follow us on Twitter, <a href="https://twitter.com/ecs_society">@ECS_Society</a>.</p>
   </section>
-  <!--
   <section>
     <h2 class="text-center">Upcoming Events</h2>
     <hr>
+    <p class="alert alert-info">If you're looking for our big freshers welcome event, check out <a href="{% url 'website:jumpstart-2018' %}">Jumpstart 2018</a>.</p>
+    <!--
     <div class="events-cards-home">
       <div class="card event-card-home">
         <img class="card-img-top" src="#" alt="Example event">
@@ -35,9 +36,9 @@
         </div>
       </div>
     </div>
-    <p>Find out more about our events on <a href="#">our events page</a>.</p>
+    -->
+    <p>Find out more about our events on <a href="{% url 'website:events' %}">our events page</a>.</p>
   </section>
-  -->
   <section>
     <h2 class="text-center">Our Gold Sponsors</h2>
     <hr>
