--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -71,8 +71,7 @@
     You can always come back to our website or follow us on Facebook for updates and checkout our events information.
   </p>
   <p>
-    Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know
-    if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.
+    Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.
   </p>
 </section>
 {% endblock %}
