Change about url (from hard coded)

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -85,7 +85,7 @@
                   About
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
-                  <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/about/">About</a>
+                  <a class="dropdown-item" href="{% url 'website:about' %}">About</a>
                   <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/filestore/index.php/s/idGPSGlxT15tbHi">Constitution</a>
                   <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/voteresult/">Voting Results</a>
                   <a class="dropdown-item" href="{% url 'website:contact' %}">Contact Us</a>
